Fix for importing a CMake project with missing directories

Importing project with nonexisting, but added in add_subdirectory() directories no longer causes KDevelop to load forever. Problem was in creating CMakeCommitChangesJob before checking if directory actually exists.

REVIEW: 117213
BUG: 332728